# hotel-pvar-drivers-linreg

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data_dictionary.md  methodology.md
notebooks/: 01_dgp_walkthrough.ipynb  01_dgp_walkthrough.py  02_eda.ipynb  02_eda.py  03_modeling.ipynb  03_modeling.py  04_robustness.ipynb  04_robustness.py  99_appendix_extended_rigor.ipynb  99_appendix_extended_rigor.py  99_appendix_interview_grade.ipynb  99_appendix_interview_grade.py
reports/: model_card.md
scripts/: generate_data.py  make_dataset.py
src/pvar_linreg/: __init__.py  config.py  data.py  dgp.py  diagnostics.py  features.py  interpret.py  plotting.py  preprocess.py
src/pvar_linreg/modeling/: __init__.py  evaluate.py  splits.py  train.py
tests/: test_dgp.py  test_diagnostics.py  test_features.py  test_modeling.py
