[project]
name = "pvar-linreg"
version = "0.1.0"
description = "Hotel price-variance driver analysis on a calibrated synthetic dataset using OLS with rigorous diagnostics."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Saad Sharif Ahmed" }]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26,<2.3",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "patsy>=0.5",
    "joblib>=1.4",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "pyarrow>=16.0",
    "arch>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "jupytext>=1.16",
    "nbstripout>=0.7",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvar_linreg"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM", "PD", "RUF"]
ignore = [
    "E501",
    "N802",
    "N803",
    "N806",
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["E402", "F401", "F811"]
"tests/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.jupytext]
formats = "ipynb,py:percent"
